Fixed artist wrapping 2: Electric Boogaloo

--- a/css/main.css
+++ b/css/main.css
@@ -37,7 +37,7 @@ h3 {
     white-space: nowrap;
     overflow: hidden;
     text-overflow: ellipsis;
-    max-width: 1fr;
+    max-width: 155px;
 }
 
 .download-icon {
